--- a/public/form/customer_info.html
+++ b/public/form/customer_info.html
@@ -38,71 +38,73 @@
                         <div class="edited-wrap edit-1"></div>
                     </div>
                     <div class="form-alert"><div> Form Submitted </div></div>
+                    <div class="user-alert"><div class="icon"></div><div>Please Validate Inputs !</div></div>
                     <!--------- CUSTOMER FORM START ------------>
                     <div class="form-content" id="form">
                         <div class="f1">
-                            <label for="name"> First Name <div class="alert">*</div></label>
-                            <input type="text" class="first-name" placeholder="Enter here">
+                            <label for="name"> First Name <div class="notify"></div></label>
+                            <input type="text" class="first-name validation" placeholder="Enter here" minlength="3" maxlength="50" required>
                             <div class="icon"><div class="i i-name"></div></div>
                         </div>
                         <div class="f2">
-                            <label for="name"> Last Name <div class="alert">*</div></label>
-                            <input type="text" class="last-name" placeholder="Enter here">
+                            <label for="name"> Last Name <div class="notify"></div></label>
+                            <input type="text" class="last-name validation" placeholder="Enter here" minlength="3" maxlength="50" required>
                             <div class="icon"><div class="i i-name"></div></div>
                         </div>
                         <div class="f3">
-                            <label for="email"> Email <div class="alert">*</div></label>
-                            <input type="email" class="email" placeholder="example@domain.com">
+                            <label for="email"> Email <div class="notify"></div></label>
+                            <input type="email" class="email validation" placeholder="example@domain.com" required>
                             <div class="icon"><div class="i i-email"></div></div>
                         </div>
                         <div class="f4">
-                            <label for="tel"> Phone Number <div class="alert">*</div></label>
-                            <input type="tel" class="tel" placeholder="233 245678900">
+                            <label for="tel"> Phone Number <div class="notify"></div></label>
+                            <input type="tel" class="tel validation" placeholder="233 245678900" minlength="3" maxlength="10" required>
                             <div class="icon"><div class="i i-number"></div></div>
                         </div>
                         <div class="f5">
-                            <label for="company"> Company (option)</label>
+                            <label for="company"> Company (option) <div class="notify"></div></label>
                             <input type="text" class="company" placeholder="Enter here">
                             <div class="icon"><div class="i i-company"></div></div>
                         </div>
                         <div class="f6">
-                            <label for="region"> Region <div class="alert">*</div></label>
-                            <input type="text" class="region" placeholder="Enter to select option">
+                            <label for="region"> Region <div class="notify"></div></label>
+                            <select class="select-option-region validation" name="region" id="">
+                                <option class="select-option-region" id="select-default-color" value="" required>Select Option..</option>
+                                <option class="select-option-region" value="Ashanti">Ashanti</option>
+                                <option class="select-option-region" value="Central">Central</option>
+                                <option class="select-option-region" value="Greater Accra">Greater Accra</option>
+                                <option class="select-option-region" value="Western">Western</option>
+                                <option class="select-option-region" value="Eastern">Eastern</option>
+                                <option class="select-option-region" value="Ahafo">Ahafo</option>
+                                <option class="select-option-region" value="Northern">Northern</option>
+                                <option class="select-option-region" value="Upper East">Upper East</option>
+                                <option class="select-option-region" value="Upper West">Upper West</option>
+                            </select>
                             <div class="icon"><div class="i i-region"></div></div>
-                            <div class="arrow-wrap" data-arrow="2"><div class="arrow a2" data-arrow="2"></div></div>
-                            <div class="region-option options" id="region" data-opt="2">
-                                <span class="region-select" value="Ashanti">Ashanti</span>
-                                <span class="region-select" value="Central">Central</span>
-                                <span class="region-select" value="Greater Accra">Greater Accra</span>
-                                <span class="region-select" value="Western">Western</span>
-                                <span class="region-select" value="Eastern">Eastern</span>
-                            </div>
                         </div>
                         <div class="f7">
-                            <label for="city"> City / Town <div class="alert">*</div></label>
-                            <input type="text" class="city" placeholder="Enter to select option">
+                            <label for="city"> City / Town <div class="notify"></div></label>
                             <div class="icon"><div class="i i-city"></div></div>
-                            <div class="arrow-wrap" data-arrow="2"><div class="arrow a3" data-arrow="3"></div></div>
-                            <div class="city-option citySel options" id="city" data-opt="3">
+                            <select class="select-option-city citySel validation" name="city" id="" required>
                                 
-                            </div>
+                            </select>
                         </div>
                         <div class="f8">
-                            <label for="digital"> Digital Address <div class="alert">*</div></label>
-                            <input type="text" class="digital" placeholder="Enter here">
+                            <label for="digital"> Digital Address <div class="notify"></div></label>
+                            <input type="text" class="digital validation" placeholder="Enter here" maxlength="12" required>
                             <div class="icon"><div class="i i-location"></div></div>
-                            <div class="note">* Eg: AO-232-4444*</div>
+                            <div class="note">* Eg: AO-###-####*</div>
                         </div>
                         <div class="f9">
-                            <label for="residential"> Residential Address <div class="alert">*</div></label>
-                            <input type="text" class="residential" placeholder="Enter here">
+                            <label for="residential"> Residential Address <div class="notify"></div></label>
+                            <input type="text" class="residential validation" placeholder="Enter here" minlength="3" required>
                             <div class="icon"><div class="i i-location"></div></div>
                             <div class="note">* may include landmarks *</div>
                         </div>
                         <div class="f10">
                             <label for="agreement"> Agreement </label>
                             <div class="agree-container">
-                                <input type="radio" class="agreement" placeholder="Enter here">
+                                <input type="checkbox" class="agreement validation" value="Agree Terms & Conditions" required>
                                 <p> It can be used as a farmer's market bag, a picnic bang or storage 
                                     of groceries in the kitchen,with the variety of colors it has, it 
                                     also adds an aesthetic feature in the home. The farmers market baskets
@@ -127,14 +129,14 @@
                         </div>
                         <div class="delivery-content">
                             <div class="delivery-cell">
-                                <input type="radio" class="delivery-check radio_1">
+                                <input type="checkbox" class="delivery-check radio_1" value="Delivery 1">
                                 <div class="radio-header"> Delivery 1 </div>
                                 <div class="radio-content">
                                     1
                                 </div>
                             </div>
                             <div class="delivery-cell">
-                                <input type="radio" class="delivery-check radio_2">
+                                <input type="checkbox" class="delivery-check radio_2" value="Delivery 2">
                                 <div class="radio-header"> Delivery 2 </div>
                                 <div class="radio-content">
                                     2
