--- a/public/form/customer_info.html
+++ b/public/form/customer_info.html
@@ -37,7 +37,7 @@
                         <div> Billed To </div>
                         <div class="edited-wrap edit-1"></div>
                     </div>
-                    <div class="user-alert"><div class="icon"></div><div>Please Validate Inputs !</div></div>
+                    <div class="user-alert"><div class="icon"></div><div id="error">Please Validate Inputs !</div></div>
                     <!--------- CUSTOMER FORM START ------------>
                     <div class="form-content" id="form">
                         <div class="f1">
@@ -266,9 +266,22 @@
                                             <!--
                                             <div> Invoice </div>
                                             <div>Date: <span> March 23, 2022 </span></div>
-                                            <div>Invoice Serial Code: <span> 0001 </span></div>
+                                            <div>Serial Code: <span> 0001 </span></div>
                                             <div>Time Issued: <span> 07:23 52s </span></div>
                                             -->
+                                        </div>
+                                        <div class="client-wrapper-media">
+                                            <div class="header"> Bill To </div>
+                                            <ul class="client-container-media">
+                                                <!--
+                                                <li class="client-name"> opd </li>
+                                                <li class="client-tel"> 333 </li>
+                                                <li class="client-email">opd#d.com </li>
+                                                <li class="client-city"> city </li>
+                                                <li class="client-region"> Refion </li>
+                                                <li class="client-digital"> A000 </li>
+                                                -->
+                                            <ul/>
                                         </div>
                                         <div class="invoice-payment-wrap">
                                             <div> Payment Info </div>
