modify user auth and add new file

--- a/public/company-name-1.html
+++ b/public/company-name-1.html
@@ -72,6 +72,12 @@
         </div>
     </div>
     <!--------SEARCH BOX-------------------->
+    <!-------- VERIFICATION ALERT START----------->
+    <div class="verification-alert-wrap">
+        <div class="i"></div><div class="v-text">Send link to verify email</div>
+        <div class="verify-btn">Send !</div>
+    </div>
+    <!-------- VERIFICATION ALERT END----------->
     <!--------USER DASHBOARD START-------------------->
     <div class="user-fixed-image-wrap">
         <div class="image-user user-fixed-image"></div>
@@ -86,10 +92,10 @@
             <!--<div class="user-time curent-logDate"> current logIn date </div>-->
             <div class="user-btns">
                 <div class="dash-btn sign-out-btn">
-                    <div class="i i-out"></div><div> Sign Out </div>
+                    <div class="i i-out"></div><div class="it-s"> Sign Out </div>
                 </div>
                 <div class="dash-btn delete-btn">
-                    <div class="i i-deleted"></div><div>Delete User</div>
+                    <div class="i i-deleted"></div class="it-d"><div>Delete User</div>
                 </div>
             </div>
             
