modified user profile and it css file

--- a/public/company-name-2.html
+++ b/public/company-name-2.html
@@ -87,18 +87,16 @@
             <div class="user-image-wrap">
                 <div class="image-user user-image"><div class="image-text"></div></div>
             </div>
-            <div class="user-name"> User Name </div>
-            <div class=" user-email"> User Email </div>
-            <!--<div class="user-time curent-logDate"> current logIn date </div>-->
-            <div class="user-btns">
-                <div class="dash-btn sign-out-btn">
-                    <div class="i i-out"></div><div class="it-s"> Sign Out </div>
-                </div>
-                <div class="dash-btn delete-btn">
-                    <div class="i i-deleted"></div><div class="it-d">Delete User</div>
+            <div>
+                <div class="user user-name">User Nmae</div>
+                <div class="user user-email">User email</div>
+                <!--<div class="user-time curent-logDate"> current logIn date </div>-->
+                <div class="user-btns">
+                    <div class="dash-btn sign-out-btn">
+                        <div class="i i-out"></div><div class="it-s"> Sign Out </div>
+                    </div>
                 </div>
             </div>
-            
         </div>
     </div>
     <!--------USER DASHBOARD END-------------------->
