--- a/public/index.html
+++ b/public/index.html
@@ -60,14 +60,6 @@
         </div>
     </div>
     <!-- CART SECTION END -->
-    <!--------ADMIN-------------------->
-    <div class="admin-btn-container">
-        <div class="admin-tip">Admin only</div>
-        <div class="admin-btn">
-            <div class="admin-icon"></div>
-        </div>
-    </div>
-    <!--------ADMIN-------------------->
     <!-------- VERIFICATION ALERT START----------->
     <div class="verification-alert-wrap">
         <div class="i"></div><div class="v-text">Send link to verify email</div>
@@ -81,23 +73,106 @@
     <div class="user-dashboard-wrapper">
         <div class="user-dashboard-container">
             <div class="user-image-wrap">
-                <div class="image-user user-image"><div class=""></div></div>
+                <div class="image-user user-image"></div>
             </div>
-            <div class="user-name"> User Name </div>
-            <div class=" user-email"> User Email </div>
-            <!--<div class="user-time curent-logDate"> current logIn date </div>-->
-            <div class="user-btns">
-                <div class="dash-btn sign-out-btn">
-                    <div class="i i-out"></div><div class="it-s"> Sign Out </div>
-                </div>
-                <div class="dash-btn delete-btn">
-                    <div class="i i-deleted"></div><div class="it-d">Delete User</div>
+            <div>
+                <div class="user user-name">User Nmae</div>
+                <div class="user user-email">User email</div>
+                <!--<div class="user-time curent-logDate"> current logIn date </div>-->
+                <div class="user-btns">
+                    <div class="dash-btn sign-out-btn">
+                        <div class="i i-out"></div><div class="it-s"> Sign Out </div>
+                    </div>
+                    <div class="dash-btn user-edit-btn">
+                        <div class="i i-edit"></div><div class="it-e"> Edit Profile </div>
+                    </div>
+                    <div class="dash-btn delete-btn">
+                        <div class="i i-deleted"></div><div class="it-d">Delete User</div>
+                    </div>
                 </div>
             </div>
-            
         </div>
     </div>
     <!--------USER DASHBOARD END-------------------->
+    <!--------USER DASHBOARD (EDITED) START-------------------->
+    <div class="user-edited-overlay">
+        <div class="user-edited-wrapper">
+            <div class="user-edited-close"><div class="i"></div></div>
+            <form action="" method="post" class="user-update-content">
+                <div class="user-edited-header"> User Profile </div>
+                <div class="user-edit-alert">
+                    <div class="i"></div>
+                    <div class="alert-text">Profile Update Required !</div>
+                </div>
+                <div class="user-confirm-alert">
+                    <div class="confirm-container">
+                        <div class="close-confirm-alert"></div>
+                        <div class="confirm-alert-text"></div>
+                        <div class="confirm-btn">Confirm</div>
+                    </div>
+                </div>
+                <div class="user-row user-edited-image">
+                    <div class="edited-image-wrap">
+                        <div class="edited-image-container"><input class="image-file" type="file" hidden accept="image/png, image/jpeg"></div>
+                    </div>
+                </div>
+                <div class="user-row user-edited-content">
+                    <div class="user-edited-content-container">
+                        <div class="content content-name" id="hover-name">
+                            <label for="name"> Full Name </label>
+                            <div class="content-section">
+                                <div class="content-icon"><div class="i i-name"></div></div>
+                                <input class="content-input user-name-tag" type="text" name="name" value="Not Specified" readonly>
+                                <div class="content-btns">
+                                    <div class="btn edit-btn"><div class="i i-edit"></div><div class="i i-close"></div></div>
+                                    <div class="btn save-btn"><div class="i i-save"></div></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content content-email">
+                            <label for="email"> Email </label>
+                            <div class="note">Not Verified</div>
+                            <div class="content-section">
+                                <div class="verify-icon"></div>
+                                <div class="content-icon"><div class="i i-email"></div></div>
+                                <input class="content-input user-email-tag" type="email" name="email">
+                                <div class="content-btns">
+                                    <div class="btn edit-btn"><div class="i i-edit"></div><div class="i i-close"></div></div>
+                                    <div class="btn save-btn"><div class="i i-save"></div></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content content-tel">
+                            <label for="tel"> Phone Number </label>
+                            <div class="content-section">
+                                <div class="content-icon"><div class="i i-tel"></div></div>
+                                <input class="content-input user-tel-tag" type="tel" name="tel" value="Not Specified">
+                                <div class="content-btns">
+                                    <div class="btn edit-btn"><div class="i i-edit"></div><div class="i i-close"></div></div>
+                                    <div class="btn save-btn"><div class="i i-save"></div></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content content-password">
+                            <label for="update-password"> Password </label>
+                            <div class="note"> Password Changed </div>
+                            <div class="content-section">
+                                <div class="verify-icon"></div>
+                                <div class="content-icon"><div class="i i-password"></div></div>
+                                <input class="content-input user-password-tag" type="password" name="password" value=".....">
+                                <div class="content-btns">
+                                    <div class="btn edit-btn"><div class="i i-edit"></div><div class="i i-close"></div></div>
+                                    <div class="btn save-btn"><div class="i i-save"></div></div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!--------USER DASHBOARD (EDITED) END-------------------->
 
     <!-- MAIN CONTENT START -->
         <div class="main-section-A-wrapper" >
@@ -105,12 +180,16 @@
             <div class="main-section-A-container">
                 <div class="index-category-container">
                     <div class="index-category">
-                        <ul class="category-wrap"> <!-- this will be replaced by json file -->
-                            <!--
-                            <li><div></div><a href="./company-name-1.html"> list </a></li> only category lists here 
-                            <li><div></div><a href="./company-name-2.html"> list </a></li>
-                            -->
+                        <ul class="category-wrap">
                         </ul>
+                        <!--------ADMIN-------------------->
+                        <div class="admin-btn-container">
+                            <div class="admin-tip">Admin only</div>
+                            <div class="admin-btn">
+                                <div class="admin-icon"></div>
+                            </div>
+                        </div>
+                        <!--------ADMIN-------------------->
                     </div>
                 </div>
                 <span class="index-overlay"></span>
@@ -313,11 +392,7 @@
                 <form method="post" action="" class="signIn-container">
                     <div class="validate-color">
                         <div class="label-icon"><div class="icon-user"></div></div>
-                        <input type="text" name="first-name" class="input validate-signIn input-tags first-name" placeholder="First Name" minlength="3" required>
-                    </div>
-                    <div class="validate-color">
-                        <div class="label-icon"><div class="icon-user"></div></div>
-                        <input type="text" name="last-name" class="input validate-signIn input-tags last-name" placeholder="Last Name" minlength="3" required>
+                        <input type="text" name="user-name" class="input validate-signIn input-tags user-name" placeholder="User" minlength="3" required>
                     </div>
                     <div class="validate-color">
                         <div class="label-icon"><div class="icon-email"></div></div>
@@ -397,6 +472,7 @@
     <script src="./js/plugins/setup.js"></script>
     <script src="./js/plugins/vanilla-tilt.js"></script>
     <script src="./js/plugins/tiltSetup.js"></script>
+    <script src="./js/userProfile.js"></script>
     <script src="./js/plugins/firebase-app-init.js" type="module"></script>
     <script src="./js/firebase/firebase-main.js" type="module"></script>
     <!-- plugins for js end here -->
