Modify customer form file

--- a/public/index.html
+++ b/public/index.html
@@ -86,9 +86,6 @@
                     <div class="dash-btn user-edit-btn">
                         <div class="i i-edit"></div><div class="it-e"> Edit Profile </div>
                     </div>
-                    <div class="dash-btn delete-btn">
-                        <div class="i i-deleted"></div><div class="it-d">Delete User</div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -144,7 +141,7 @@
                         </div>
                         <div class="content content-email">
                             <label for="email"> Email </label>
-                            <div class="note">Not Verified</div>
+                            <div class="note"></div>
                             <div class="content-section">
                                 <div class="verify-icon"></div>
                                 <div class="content-icon"><div class="i i-email"></div></div>
@@ -168,7 +165,7 @@
                         </div>
                         <div class="content content-password">
                             <label for="update-password"> Password </label>
-                            <div class="note"> Password Changed </div>
+                            <div class="note"></div>
                             <div class="content-section">
                                 <div class="verify-icon"></div>
                                 <div class="content-icon"><div class="i i-password"></div></div>
@@ -177,6 +174,11 @@
                                     <div class="btn edit-btn"><div class="i i-edit"></div><div class="i i-close"></div></div>
                                     <div class="btn save-btn"><div class="i i-save"></div></div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="content delete-btn content-delete">
+                            <div class="delete-wrap">
+                                <div class="i i-deleted"></div><div class="it-d">Delete Account</div>
                             </div>
                         </div>
                     </div>
