resolve error and deleted some files

--- a/public/company-name-1.html
+++ b/public/company-name-1.html
@@ -104,6 +104,7 @@
     <!-- CART SECTION START -->
     <div class="cart-wrapper">
         <div class="cart-container">
+            <div class="cart-empty-alert"><div><div></div></div><div>Cart Empty</div></div>
             <!-- CART ITEM START -->
             <!--
             <div class="cart-single-wrap">
