add cloud messaging file and edit scrs

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="country" property="country_origin" content="Ghana">
     <!-- Site meta start end -->
     
-    <title>index</title>
+    <title>Fossy - HomePage</title>
 
     <!-- CSS STYLESHEET HERE -->
     <link rel="stylesheet" href="./css/landing-page.css" />
@@ -279,10 +279,10 @@
                 <div class="section-C-nav">
                     <ul class="C-nav">
                         <!-- only write CATEGORIES inside the div tag -->
-                        <li class="C-list C-red active" data-id="1"><div class="i" data-id="1"><div></div></div><h2> list </h2> </li>
-                        <li class="C-list C-white" data-id="2"><div class="i" data-id="2"><div></div></div><h2> list </h2> </li>
-                        <li class="C-list C-green" data-id="3"><div class="i" data-id="3"><div></div></div><h2> list </h2> </li>
-                        <li class="C-list C-blue" data-id="4"><div class="i" data-id="4"><div></div></div><h2> list </h2> </li>
+                        <li class="C-list C-red active" data-id="1"><div class="i" data-id="1"><div class="is" data-id="1"></div></div><h2 class="t" data-id="1"> list </h2> </li>
+                        <li class="C-list C-white" data-id="2"><div class="i" data-id="2"><div class="is" data-id="2"></div></div><h2 class="t" data-id="2"> list </h2> </li>
+                        <li class="C-list C-green" data-id="3"><div class="i" data-id="3"><div class="is" data-id="3"></div></div><h2 class="t" data-id="3"> list </h2> </li>
+                        <li class="C-list C-blue" data-id="4"><div class="i" data-id="4"><div class="is" data-id="4"></div></div><h2 class="t" data-id="4"> list </h2> </li>
                     </ul>
                 </div>
                 <div class="C-images-wrap">
