modified some files

--- a/public/index.html
+++ b/public/index.html
@@ -410,7 +410,7 @@
         </div>
         <!-- FOOT NOTE START -->
         <div class="foot-note-wrapper">
-            <div>E-commence</div>
+            <div>Shopfossy</div>
             <div class="F-note"></div>
             <div class="F-designer"></div>
         </div>
