--- a/public/company-name-1.html
+++ b/public/company-name-1.html
@@ -486,7 +486,7 @@
             </div>
             <!-- FOOT NOTE START -->
             <div class="foot-note-wrapper">
-                <div>E-commence</div>
+                <div>Shopfossy</div>
                 <div class="F-note"></div>
                 <div class="F-designer"></div>
             </div>
