--- a/public/databases/company1-database.html
+++ b/public/databases/company1-database.html
@@ -7,8 +7,8 @@
     <title>Company_Name Database</title>
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="/css/database-style.css">
-    <link rel="stylesheet" href="/css/database.animate.css">
+    <link rel="stylesheet" href="../css/database-style.css">
+    <link rel="stylesheet" href="../css/database.animate.css">
 
 </head>
 <body>
@@ -16,8 +16,8 @@
     <div class="close-wrap"><div></div></div>
     <div class="d-banner-wrap">
         <div class="database-banner">
-            <img class="icon database-icon1" src="/img/svg/database.svg" alt="">
-            <img class="icon database-icon2" src="/img/svg/database.svg" alt="">
+            <img class="icon database-icon1" src="../img/svg/database.svg" alt="">
+            <img class="icon database-icon2" src="../img/svg/database.svg" alt="">
         </div>
     </div>
     <div class="database-wrapper">
