--- a/public/databases/company3-database.html
+++ b/public/databases/company3-database.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company_Name3 Database</title>
 
-    <link rel="stylesheet" href="/css/database-style.css">
-    <link rel="stylesheet" href="/css/database.animate.css">
+    <link rel="stylesheet" href="../css/database-style.css">
+    <link rel="stylesheet" href="../css/database.animate.css">
 
 </head>
 <body>
@@ -15,8 +15,8 @@
     <div class="close-wrap"><div></div></div>
     <div class="d-banner-wrap">
         <div class="database-banner">
-            <img class="icon database-icon1" src="/img/svg/database.svg" alt="">
-            <img class="icon database-icon2" src="/img/svg/database.svg" alt="">
+            <img class="icon database-icon1" src="../img/svg/database.svg" alt="">
+            <img class="icon database-icon2" src="../img/svg/database.svg" alt="">
         </div>
     </div>
     <div class="database-wrapper">
