modified some files

--- a/public/company-name-2.html
+++ b/public/company-name-2.html
@@ -188,6 +188,7 @@
                     </div>
                     <ul class="category-content-wrap" data-res="2">
                         <div class="filter-container">
+                            <!-- data-id must be in lowercase only -->
                             <div class="filter active" data-id="all">All</div>
                             <div class="filter" data-id="cloth">Cloth</div>
                             <div class="filter" data-id="shoes">Shoes</div>
@@ -205,9 +206,10 @@
                     </div>
                     <ul class="category-content-wrap" data-res="3">
                         <div class="filter-container">
+                            <!-- data-id must be in lowercase only -->
                             <div class="filter active" data-id="all">Any Price</div>
-                            <div class="filter" data-id="Hi">High Prices</div>
-                            <div class="filter" data-id="Lo">Low Prices</div>
+                            <div class="filter" data-id="hi">High Prices</div>
+                            <div class="filter" data-id="lo">Low Prices</div>
                             <div class="filter" data-id=" ">text</div>
                             <div class="filter" data-id=" ">text</div>
                             <div class="filter" data-id=" ">text</div>
@@ -226,6 +228,7 @@
                     </div>
                     <ul class="category-content-wrap" data-res="4">
                         <div class="filter-container">
+                            <!-- data-id must be in lowercase only -->
                             <div class="filter active" data-id="all">Brown</div>
                             <div class="filter" data-id=" ">Black</div>
                             <div class="filter" data-id=" ">Red</div>
@@ -247,6 +250,7 @@
                     </div>
                     <ul class="category-content-wrap" data-res="5">
                         <div class="filter-container">
+                            <!-- data-id must be in lowercase only -->
                             <div class="filter active" data-id="all">All type</div>
                             <div class="filter" data-id=" ">Handmade</div>
                             <div class="filter" data-id=" ">text</div>
