--- a/public/index.html
+++ b/public/index.html
@@ -347,16 +347,16 @@
             <div class="F-title"> ...top trending... </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/1.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/2.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/3.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/4.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/5.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/6.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/7.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/8.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/9.jpg)"></a></div>
-                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/10.jpg)"></a></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/1.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/2.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/3.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/4.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/5.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/6.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/7.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/8.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/9.jpg)"></a><span>check it out</span></div>
+                    <div class="swiper-slide"><a href="#" style="background-image:url(./img/index/slide/10.jpg)"></a><span>check it out</span></div>
                 </div>
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
