--- a/public/company-name-1.html
+++ b/public/company-name-1.html
@@ -187,10 +187,11 @@
                         </div>
                     </div>
                     <ul class="category-content-wrap" data-res="2">
-                        <div class="filter-container">
-                            <div class="filter active" data-id="all">All</div>
-                            <div class="filter" data-id="cloth">Cloth</div>
-                            <div class="filter" data-id="shoes">Shoes</div>
+                        <div class="filter-container fc-1">
+                            <!-- data-id must be in lowercase only -->
+                            <div class="filter active" data-id="all"> all </div>
+                            <div class="filter" data-id="cloth"> cloth </div>
+                            <div class="filter" data-id="shoes"> shoes </div>
                         </div>
                     </ul>
                 </div>
@@ -204,10 +205,11 @@
                         </div>
                     </div>
                     <ul class="category-content-wrap" data-res="3">
-                        <div class="filter-container">
+                        <div class="filter-container fc-2">
+                            <!-- data-id must be in lowercase only -->
                             <div class="filter active" data-id="all">Any Price</div>
-                            <div class="filter" data-id="Hi">High Prices</div>
-                            <div class="filter" data-id="Lo">Low Prices</div>
+                            <div class="filter" data-id="hi">High Prices</div>
+                            <div class="filter" data-id="lo">Low Prices</div>
                             <div class="filter" data-id=" ">text</div>
                             <div class="filter" data-id=" ">text</div>
                             <div class="filter" data-id=" ">text</div>
@@ -225,8 +227,9 @@
                         </div>
                     </div>
                     <ul class="category-content-wrap" data-res="4">
-                        <div class="filter-container">
-                            <div class="filter active" data-id="all">Brown</div>
+                        <div class="filter-container fc-3">
+                            <!-- data-id must be in lowercase only -->
+                            <div class="filter active" data-id="all">all</div>
                             <div class="filter" data-id=" ">Black</div>
                             <div class="filter" data-id=" ">Red</div>
                             <div class="filter" data-id=" ">text</div>
@@ -247,6 +250,7 @@
                     </div>
                     <ul class="category-content-wrap" data-res="5">
                         <div class="filter-container">
+                            <!-- data-id must be in lowercase only -->
                             <div class="filter active" data-id="all">All type</div>
                             <div class="filter" data-id=" ">Handmade</div>
                             <div class="filter" data-id=" ">text</div>
