modified form, index and customer pages

--- a/public/company-name-1.html
+++ b/public/company-name-1.html
@@ -100,11 +100,14 @@
                 <div class="image-user user-image"><div class="image-text"></div></div>
             </div>
             <div>
-                <div class="user user-name">User Nmae</div>
-                <div class="user user-email">User email</div>
+                <div class="user user-name">Not SignIn</div>
+                <div class="user user-email">SignIn at home page</div>
                 <!--<div class="user-time curent-logDate"> current logIn date </div>-->
                 <div class="user-btns">
-                    <div class="dash-btn sign-out-btn">
+                    <div class="dash-btn in sign-in-btn">
+                        <div class="i i-redirect"></div><div class="it-i"> Redirect... </div>
+                    </div>
+                    <div class="dash-btn off sign-out-btn">
                         <div class="i i-out"></div><div class="it-s"> Sign Out </div>
                     </div>
                 </div>
