--- a/public/customer_info.html
+++ b/public/customer_info.html
@@ -7,11 +7,11 @@
     <title> Shopfossy | Customer Details </title>
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="../css/customer_details.css">
-    <link rel="stylesheet" href="../css/landing-page.css">
-    <link rel="stylesheet" href="../css/invoice.css">
-    <link rel="stylesheet" href="../css/@keyframes-landing.css">
-    <link rel="stylesheet" href="../css/@media_customer_details.css">
+    <link rel="stylesheet" href="./css/customer_details.css">
+    <link rel="stylesheet" href="./css/landing-page.css">
+    <link rel="stylesheet" href="./css/invoice.css">
+    <link rel="stylesheet" href="./css/@keyframes-landing.css">
+    <link rel="stylesheet" href="./css/@media_customer_details.css">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -43,6 +43,14 @@
         <div class="overlay">
             <div class="logo"></div>
             <div class="form-wrapper">
+                <!---------- REQUEST SIGN IN PAGE START ------------>
+                <div class="request-signIn-page">
+                    <div>
+                        <div class="request-message"> SIGN IN TO ORDER </div>
+                        <div class="request-btn"><a href="/public/index.html"><div class="i"></div><div>Redirect...</div></a></div>
+                    </div>
+                </div>
+                <!----------------------------------------------->
                 <!---------- CUSTOMER DETAILS START ------------>
                 <form action="" method="post" class="form-container">
                     <div class="form-title eds">
@@ -366,14 +374,14 @@
     <div class="hidden showing-profiling"></div>
     <div class="hidden cart-clear"></div>
     <!-------HIDDEN TAGS END ------------>
-
+    
 
 
     <!-------JS START ------------>
     <!-- plugins for js start here -->
-    <script src="../js/landing-page.js"></script>
-    <script src="../js/plugins/firebase-app-init.js" type="module"></script>
-    <script src="../js/customer_details.js" type="module"></script>
+    <script src="./js/landing-page.js"></script>
+    <script src="./js/plugins/firebase-app-init.js" type="module"></script>
+    <script src="./js/customer_details.js" type="module"></script>
 
     <!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
